@@ -1,3 +1,8 @@
+Mon Jul  3 04:54:13 BST 2006  Colin Watson  <cjwatson@debian.org>
+
+	* libdb/db_lookup.c (make_content): Break up dsize calculation
+	  differently for legibility.
+
 Tue Mar 21 11:08:55 GMT 2006  Colin Watson  <cjwatson@debian.org>
 
 	Improve portability to Solaris and other systems without setenv.
